<resources>
    <string name="app_name">Challenge.me</string>
    <string name="today_challenge">Today\'s challenge:</string>
    <string name="challenge"></string>
    <string name="completed">Completed?</string>

    <string name="descr_overflow_button"></string>

    <string name="account_string">My Account</string>
    <string name="weekly_challenge">Weekly Challenge</string>
    <string name="about_string">About Challenge.me</string>
    <string name="settings_string">Settings</string>
    <string name="string_email">Email</string>
    <string name="string_password">Password</string>
    <string name="string_login">LOGIN</string>
    <string name="string_not_member">Not a member? <u>Sign up now.</u></string>
    <string name="string_already_registered">Already registered? <u>Login now.</u></string>
    <string name="string_register">REGISTER</string>
    <string name="auth_failed">Authorization failed.</string>
    <string name="home_string">Home</string>
    <string name="string_sign_out">Sign Out</string>
</resources>
